updated nav bar

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
     <!--Nav Bar-->
     <div class="container-fluid bg-danger">
       <div class="row w-100">
-        <nav class="navbar">
+        <nav class="navbar d-flex justify-content-around">
           <!--user icon-->
           <i class="fa-solid fa-user fa-2xl" id="fa-user"></i>
-          <div class="container-fluid">
+
             <!--navbar text-->
-            <span class="navbar-brand mb-0 " id="navbar-text">Hello George! Welcome back.</span>
-          </div>
+            <span class="navbar-brand mb-0 h1" id="navbar-text">Hello George! Welcome back.</span>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search.." aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
